--- a/starters/lab/lab-05-import-recode-starter/lab-05.Rmd
+++ b/starters/lab/lab-05-import-recode-starter/lab-05.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 ### Load packages and data
 
-```{r load-packages message = FALSE}
+```{r load-packages, message = FALSE}
 library(tidyverse)
 library(readxl)
 library(openintro)
